k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-api
  labels:
    app: express-api
spec:
  type: ClusterIP
  selector:
    app: express-api
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
